--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <div class="loader-circle"></div>
         <div class="loader-text">Loading Portfolio</div>
     </div>
-
+   <div id="github-stats">
+  <p>Total Stars: <span id="total-stars">-</span></p>
+  <p>Total Public Repos: <span id="total-repos">-</span></p>
+</div>
     <!-- Floating Navigation -->
     <nav class="floating-nav">
         <ul>
